--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "login-user-profile",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "dist-cjs/index.js",
-  "browser": "dist-esm/index.js",
-  "types": "dist-cjs/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "tslint --project .",
